--- a/css/main.css
+++ b/css/main.css
@@ -3,56 +3,61 @@
   padding: 0;
   box-sizing: border-box
 }
+.img-zoom-container{
+	position:relative;
+}
 .show{
-  width: 727px;
-  height: 267px;
+	width: 100%;
+	height: auto;
+	
 }
 .small-img{
-  width: 630px;
-  height: 70px;
-  margin-top: 10px;
-  position: relative;
-  left: 25px;
+	width: 90%;
+	height: 56px;
+	margin-top: 10px;
+	margin:0;
+	position: relative;
+	left: 25px;
 }
 .small-img .icon-left, .small-img .icon-right{
-  width: 12px;
-  height: 24px;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto 0;
+	width: 12px;
+	height: 24px;
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
 }
 .small-img .icon-left{
-  transform: rotate(180deg)
+	left: -15px;
 }
 .small-img .icon-right{
-  right: 0;
+	right: -15px;
 }
 .small-img .icon-left:hover, .small-img .icon-right:hover{
-  opacity: .5;
+	opacity: .5;
 }
 .small-container{
-  width: 630px;
-  height: 70px;
-  overflow: hidden;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+	overflow:hidden;
+	width: 100%;
+	height: 56px;
+	overflow: hidden;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
 }
 .small-container div{
-  width: 800%;
-  position: relative;
+	position: relative;
 }
 
 .small-container .show-small-img{
-  width: 153px;
-  height: 56px;
-  margin-right: 6px;
-  cursor: pointer;
-  float: left;
+	width: auto;
+	height: 56px;
+	margin-right: 6px;
+	cursor: pointer;
+	float: left;
 }
 .small-container .show-small-img:last-of-type{
-  margin-right: 0;
+	margin-right: 0;
 }
