--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,37 @@
 .small-container .show-small-img:last-of-type{
 	margin-right: 0;
 }
+#img-zoom-mobileViewer{
+	display:none;
+	position:absolute;
+	z-index:11;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	background:#fff;
+}
+.img-zoom-mobileViewContainer{
+	width:100vw;
+	height:85vh;
+	overflow:scroll;
+	
+}
+.img-zoom-cover{
+	position:absolute;
+	background:#fff;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	display:none;
+}
+#img-zoom-mobileViewerClose{
+	text-align:center;
+	position:absolute;
+	width:100%;
+	height:10vh;
+	background:#000;
+	color:#FFF;
+	padding: 10px 0px 10px 0px;
+}
