Altered css/main.css - added selected class for thumbnails to improve ability to restyle controls. Altered scripts/main.js - removed inline styling system and added class based styling system.

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@
 .show{
 	width: 100%;
 	height: auto;
-	
 }
 .small-img{
 	width: 90%;
@@ -18,6 +17,10 @@
 	margin:0;
 	position: relative;
 	left: 25px;
+}
+.img-zoom-selected{
+	border: solid 1px #951b25;
+	padding: 2px;
 }
 .small-img .icon-left, .small-img .icon-right{
 	width: 12px;
